--- a/frontend/src/app/components/pages/food-page/food-page.component.html
+++ b/frontend/src/app/components/pages/food-page/food-page.component.html
@@ -1,6 +1,9 @@
-<app-not-found [visible]="!food" resetLinkText="Go to Homepage"></app-not-found>
+<app-not-found
+  [visible]="!food.id"
+  resetLinkText="Back to Homepage"
+></app-not-found>
 
-<div *ngIf="food" class="container">
+<div *ngIf="food.id" class="container">
   <img [src]="food.imageUrl" [alt]="food.name" />
   <div class="details">
     <div class="header">
