--- a/frontend/src/app/components/partials/search/search.component.html
+++ b/frontend/src/app/components/partials/search/search.component.html
@@ -6,5 +6,6 @@
     (keyup.enter)="search(s.value)"
     [value]="searchTerm"
   />
+  <!-- (input)="search(s.value)" -->
   <button (click)="search(s.value)">Search</button>
 </div>
