--- a/frontend/src/app/components/pages/login-page/login-page.component.html
+++ b/frontend/src/app/components/pages/login-page/login-page.component.html
@@ -3,22 +3,25 @@
     <app-title title="Login"></app-title>
 
     <form [formGroup]="loginForm" (ngSubmit)="submit()">
-      <div class="input-container">
-        <label>Email</label>
-        <div>
-          <input type="email" placeholder="Email" formControlName="email" />
+      <input-container label="Email">
+        <input type="email" placeholder="Email" formControlName="email" />
+        <div class="error-list" *ngIf="fc.email.errors && isSubmited">
+          <div *ngIf="fc.email.errors.required">Should not be empty</div>
+          <div *ngIf="fc.email.errors.email">Email is not correct</div>
         </div>
-      </div>
-      <div class="input-container">
-        <label>Password</label>
-        <div>
-          <input
-            type="password"
-            placeholder="Password"
-            formControlName="password"
-          />
+      </input-container>
+
+      <input-container label="Password">
+        <input
+          type="password"
+          placeholder="Password"
+          formControlName="password"
+        />
+        <div class="error-list" *ngIf="fc.password.errors && isSubmited">
+          <div *ngIf="fc.password.errors.required">Should not be empty</div>
         </div>
-      </div>
+      </input-container>
+
       <div class="button">
         <button type="submit">Login</button>
       </div>
