--- a/frontend/src/app/components/pages/login-page/login-page.component.html
+++ b/frontend/src/app/components/pages/login-page/login-page.component.html
@@ -3,28 +3,20 @@
     <app-title title="Login"></app-title>
 
     <form [formGroup]="loginForm" (ngSubmit)="submit()">
-      <input-container label="Email">
-        <input type="email" placeholder="Email" formControlName="email" />
-        <div class="error-list" *ngIf="fc.email.errors && isSubmited">
-          <div *ngIf="fc.email.errors.required">Should not be empty</div>
-          <div *ngIf="fc.email.errors.email">Email is not correct</div>
-        </div>
-      </input-container>
+      <text-input
+        [control]="fc.email"
+        [showErrorsWhen]="isSubmited"
+        type="email"
+        label="Email"
+      ></text-input>
 
-      <input-container label="Password">
-        <input
-          type="password"
-          placeholder="Password"
-          formControlName="password"
-        />
-        <div class="error-list" *ngIf="fc.password.errors && isSubmited">
-          <div *ngIf="fc.password.errors.required">Should not be empty</div>
-        </div>
-      </input-container>
-
-      <div class="button">
-        <button type="submit">Login</button>
-      </div>
+      <text-input
+        [control]="fc.password"
+        [showErrorsWhen]="isSubmited"
+        type="password"
+        label="Password"
+      ></text-input>
+      <default-button text="Login"></default-button>
     </form>
   </div>
 </div>
