add register page and  its configuration

--- a/frontend/src/app/components/pages/login-page/login-page.component.html
+++ b/frontend/src/app/components/pages/login-page/login-page.component.html
@@ -17,6 +17,13 @@
         label="Password"
       ></text-input>
       <default-button text="Login"></default-button>
+      <div class="register">
+        New user? &nbsp;
+        <!-- &nbsp to make a space -->
+        <a routerLink="/register" [queryParams]="{ returnUrl: returnUrl }"
+          >Register Here</a
+        >
+      </div>
     </form>
   </div>
 </div>
